src/objects/CooperationResult__c.object
<CustomObject>
    <fields>
        <fullName>AccountAcountRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会計</label>
        <referenceTo>AccountAcount__c</referenceTo>
        <relationshipLabel>連携結果</relationshipLabel>
        <relationshipName>CooperationAccountAcountRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ErrorCode__c</fullName>
        <label>エラーコード</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorContent__c</fullName>
        <label>エラー内容</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ErrorCount__c</fullName>
        <label>エラー回数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FunctionType__c</fullName>
        <label>機能種別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>予約取込</fullName>
                </value>
                <value>
                    <fullName>在庫調整</fullName>
                </value>
                <value>
                    <fullName>仕入_買掛</fullName>
                </value>
                <value>
                    <fullName>仕入_買掛決済</fullName>
                </value>
                <value>
                    <fullName>操作ログ</fullName>
                </value>
                <value>
                    <fullName>メール取込</fullName>
                </value>
                <value>
                    <fullName>レーシト印刷</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JobProcessType__c</fullName>
        <label>ジョブ処理タイプ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NORMAL</fullName>
                    <default>true</default>
                    <label>NORMAL</label>
                </value>
                <value>
                    <fullName>STOP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MailSendAddress1__c</fullName>
        <label>メール通知先1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MailSendAddress2__c</fullName>
        <label>メール通知先2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MailSendAddress3__c</fullName>
        <label>メール通知先3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MailSendComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>メール送信済</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ManageID__c</fullName>
        <externalId>true</externalId>
        <label>管理ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ParentRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>親連携結果</label>
        <referenceTo>CooperationResult__c</referenceTo>
        <relationshipLabel>連携結果</relationshipLabel>
        <relationshipName>ParentDefRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProcessLog__c</fullName>
        <label>処理ログ</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProcessingType__c</fullName>
        <label>処理種別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TL</fullName>
                </value>
                <value>
                    <fullName>TA</fullName>
                </value>
                <value>
                    <fullName>TR</fullName>
                </value>
                <value>
                    <fullName>JR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShopCode__c</fullName>
        <label>店舗コード</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FunctionType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>XML取込完了</fullName>
                </value>
                <value>
                    <fullName>予約取込待ち</fullName>
                </value>
                <value>
                    <fullName>予約取込完了</fullName>
                </value>
                <value>
                    <fullName>予約取込NG</fullName>
                </value>
                <value>
                    <fullName>在庫調整NG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>連携結果</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>ManageID__c</columns>
        <columns>FunctionType__c</columns>
        <columns>ProcessLog__c</columns>
        <columns>ProcessingType__c</columns>
        <columns>ShopCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>LeadImport</fullName>
        <columns>NAME</columns>
        <columns>ManageID__c</columns>
        <columns>Status__c</columns>
        <columns>FunctionType__c</columns>
        <columns>ProcessingType__c</columns>
        <columns>ParentRef__c</columns>
        <columns>ShopCode__c</columns>
        <columns>ErrorCode__c</columns>
        <columns>ErrorCount__c</columns>
        <columns>ErrorContent__c</columns>
        <columns>MailSendComplete__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FunctionType__c</field>
            <operation>equals</operation>
            <value>予約取込</value>
        </filters>
        <label>予約取込</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>CO_{YYYYMMDD}{00000000}</displayFormat>
        <label>連携名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>